--- a/ind.html
+++ b/ind.html
@@ -1365,7 +1365,7 @@
         </div>
       </div>
     </div>
-    <script>
+    <!-- <script>
       
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -1378,7 +1378,7 @@
                 });
         });
       }
-          </script>
+          </script> -->
     <script type="module" src="JavaScript/home.js"></script>
     <script type="module" src="./service-worker.js"></script>
     <script async type="module" src="JavaScript/script.js"></script>
